<resources>
    <string name="login_checkbox1">保存密码</string>
    <string name="login_checkbox2">自动登录</string>
    <string name="app_name">湖州港航</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="see">查看</string>
    <string name="update">修改</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="check">审核</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="reset">取消</string>
    <string name="save">保存</string>
    <string name="upload">提交</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="year">年</string>
    <string name="mouth">月</string>
    <string name="select">选择</string>
    <string name="Recoder">录像</string>
    <string name="moreing">释放加载更多</string>
    <string name="more">加载中····</string>
    <string name="searchResult">搜索结果</string>
    <string name="noResult">没有搜索到相关信息</string>
    <string name="department">群组</string>
    <string name="remind">设置闹钟</string>
    <string name="feedback">查看回馈</string>
    <string name="username_search_hint">请输入真实姓名</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="photograph">照相</string>
    <string name="soundrecord">录音</string>
    <string name="new_time">0:0</string>
    <string name="attament">附件</string>
    <string name="go_home">返回主页</string>
    <string name="nohistory">无历史数据</string>
    <string name="bs_menu_title">综合查询</string>
    <string name="bs_title">船舶基本信息</string>
    <string name="bs_menulist01">船舶基本信息</string>
    <string name="bs_menulist02">船舶证书信息</string>
    <string name="bs_menulist03">船舶违章信息</string>
    <string name="bs_menulist04">船舶签证信息</string>
    <string name="bs_menulist05">船舶缴费信息</string>
    <string name="bs_menulist06">船舶检验信息</string>
    <string name="bs_menulist07">港航规费信息</string>
    <string name="bs_menulist08">码头作业信息</string>
    <string name="bs_menulist09">航运企业信息</string>
    <string name="bs_menulist10">码头企业信息</string>
    <string name="bs_menulist11">船员综合信息</string>
    <string name="bs_sourch_btn">查询</string>
    <string name="bs_notice">请输入船名</string>
    <string name="bs_opentext">展开</string>
    <string name="bs_closetext">收起</string>
    <string name="bs_cbjbxx_txt01">船舶名称：</string>
    <string name="bs_cbjbxx_txt02">船检登记号：</string>
    <string name="bs_cbjbxx_txt03">船舶登记号：</string>
    <string name="bs_cbjbxx_txt04">船籍港：</string>
    <string name="bs_cbjbxx_txt05">船籍港代码：</string>
    <string name="bs_cbjbxx_txt06">船舶类型：</string>
    <string name="bs_cbjbxx_txt07">船舶类型代码：</string>
    <string name="bs_cbjbxx_txt08">主机总功率：</string>
    <string name="bs_cbjbxx_txt09">总吨位：</string>
    <string name="bs_cbjbxx_txt10">净吨位：</string>
    <string name="bs_cbjbxx_txt11">总长（m）：</string>
    <string name="bs_cbjbxx_txt12">船长（m）：</string>
    <string name="bs_cbjbxx_txt13">量吨甲板长（m）：</string>
    <string name="bs_cbjbxx_txt14">型宽（m）：</string>
    <string name="bs_cbjbxx_txt15">型深（m）：</string>
    <string name="bs_cbjbxx_txt16">参考载货量：</string>
    <string name="bs_cbjbxx_txt17">吃水空载：</string>
    <string name="bs_cbjbxx_txt18">吃水满载：</string>
    <string name="bs_cbjbxx_txt19">船舶所有人：</string>
    <string name="bs_cbjbxx_txt20">船舶经营人：</string>
    <string name="bs_cbjbxx_txt21">经营人联系电话：</string>
    <string name="bs_cbzsxx_txt00">证书编号：</string>
    <string name="bs_cbzsxx_txt01">证书名称：</string>
    <string name="bs_cbzsxx_txt02">发证日期：</string>
    <string name="bs_cbzsxx_txt03">有效期：</string>
    <string name="bs_cbwzxx_txt00">没有违章信息</string>
    <string name="bs_cbwzxx_Punishment">处罚：</string>
    <string name="bs_cbwzxx_type">类型：</string>
    <string name="bs_cbwzxx_PunishmentType01">警告</string>
    <string name="bs_cbwzxx_PunishmentType02">罚款</string>
    <string name="bs_cbwzxx_PunishmentType03">暂扣证照</string>
    <string name="bs_cbwzxx_PunishmentType04">吊销证照</string>
    <string name="bs_cbwzxx_PunishmentType05">没收船舶</string>
    <string name="bs_cbwzxx_PunishmentType06">没收非法财物</string>
    <string name="bs_cbwzxx_PunishmentType07">没收违法所得</string>
    <string name="bs_cbwzxx_PunishmentType08">责令停产停业</string>
    <string name="bs_cbwzxx_PunishmentType09">行政拘留</string>
    <string name="bs_cbwzxx_PunishmentType10">其他</string>
    <string name="bs_cbwzxx_yes">是</string>
    <string name="bs_cbwzxx_no">否</string>
    <string name="bs_cbwzxx_time">时间：</string>
    <string name="bs_cbwzxx_txt01">受理号：</string>
    <string name="bs_cbwzxx_txt02">中文船名：</string>
    <string name="bs_cbwzxx_txt03">受理时间：</string>
    <string name="bs_cbwzxx_txt04">案由：</string>
    <string name="bs_cbwzxx_txt05">发案时间：</string>
    <string name="bs_cbwzxx_txt06">发案地点：</string>
    <string name="bs_cbwzxx_txt07">案件类别：</string>
    <string name="bs_cbwzxx_txt08">主要事实：</string>
    <string name="bs_cbwzxx_txt09">执法手册编号：</string>
    <string name="bs_cbwzxx_txt10">违法内容：</string>
    <string name="bs_cbwzxx_txt11">违反条款：</string>
    <string name="bs_cbwzxx_txt12">处罚条款：</string>
    <string name="bs_cbwzxx_txt13">处罚意见：</string>
    <string name="bs_cbwzxx_txt14">处罚类别：</string>
    <string name="bs_cbwzxx_txt15">是否处罚：</string>
    <string name="bs_cbwzxx_txt16">是否结案：</string>
    <string name="bs_cbwzxx_txt17">结案日期：</string>
    <string name="bs_cbwzxx_no_record">船舶记录良好 暂无违章信息</string>
    <string name="bs_cbjfxx_noreslut">缴费记录</string>
    <string name="bs_cbjfxx_money">应缴金额：</string>
    <string name="bs_cbjfxx_money2">实缴金额：</string>
    <string name="bs_cbjfxx_startday">有效期起：</string>
    <string name="bs_cbjfxx_endday">有效期至：</string>
    <string name="bs_cbjfxx_owe">欠费：</string>
    <string name="bs_cbjfxx_txt">没有缴费信息</string>
    <string name="bs_cbjfxx_txt01">开票序列号：</string>
    <string name="bs_cbjfxx_txt02">缴费项目：</string>
    <string name="bs_cbjfxx_txt03">应缴金额（元）：</string>
    <string name="bs_cbjfxx_txt04">实缴金额（元）：</string>
    <string name="bs_cbjfxx_txt05">有效期起：</string>
    <string name="bs_cbjfxx_txt06">有效期止：</string>
    <string name="bs_cbjfxx_txt07">开票日期：</string>
    <string name="bs_cbjfxx_txt08">开票单位：</string>
    <string name="bs_cbjfxx_txt09">开票地市：</string>
    <string name="bs_cbjfxx_txt10">退费标志：</string>
    <string name="bs_cbjfxx_txt11">作废标志：</string>
    <string name="bs_cbjfxx_txt12">销号标志：</string>
    <string name="bs_cbjfxx_warn">欠费信息</string>
    <string name="bs_cbjfxx_nowarn">已缴费信息</string>
    <string name="bs_cbcjxx_txt00">没有船检信息：</string>
    <string name="bs_cbcjxx_jybh">检验编号：</string>
    <string name="bs_cbcjxx_zwcm">中文船名：</string>
    <string name="bs_cbcjxx_jydd">检验地点：</string>
    <string name="bs_cbcjxx_jydwmc">检验单位名称：</string>
    <string name="bs_cbcjxx_jybm">检验部门：</string>
    <string name="bs_cbcjxx_sqr">申请人：</string>
    <string name="bs_cbcjxx_jyzl">检验种类：</string>
    <string name="bs_cbcjxx_jyksrq">检验开始日期：</string>
    <string name="bs_cbcjxx_xcjyrq">下次检验日期：</string>
    <string name="bs_cbcjxx_jywcrq">检验完成日期：</string>
    <string name="bs_cbcjxx_qtjy">其他检验：</string>
    <string name="bs_cbcjxx_sfwc">是否完成：</string>
    <string name="bs_cbcjxx_bz">备注： </string>
    <string name="schedule_manage">日程安排</string>
    <string name="schedule_manage1">公务通知列表</string>
    <string name="schedule_all_time">公务时间:</string>
    <string name="schedule_meeting_time">公务时间:</string>
    <string name="schedule_add">添加日程</string>
    <string name="schedule_add_time">添加公务通知</string>
    <string name="schedule_add1">添加转发日程</string>
    <string name="schedule_add_time1">添加转发会议</string>
    <string name="set_clock">设置闹钟</string>
    <string name="schedule_activity">日程反馈</string>
    <string name="schedule_no_activity">不参加</string>
    <string name="schedule_title">日程名称：</string>
    <string name="schedule_time_title">会议名称：</string>
    <string name="schedule_first_user">发起人：</string>
    <string name="schedule_user">参加人员：</string>
    <string name="schedule_userinfo">转发给：</string>
    <string name="schedule_time">起始时间：</string>
    <string name="schedule_location">地点：</string>
    <string name="schedule_kind">类别：</string>
    <string name="spinner_kind">类别</string>
    <string name="schedule_content">内容：</string>
    <string name="schedule_add_userNotic">增加用户</string>
    <string name="schedule_hint_name">请输入日程名称</string>
    <string name="schedule_hint_name1">请输入日程名称</string>
    <string name="schedule_hint_location">请输入日程地点</string>
    <string name="schedule_hint_content">请输入日程内容</string>
    <string name="schedule_hint_result">请输入不参加的理由</string>
    <string name="schedule_attament">添加附件</string>
    <string name="schedule_YESorNO">是否参加：</string>
    <string name="schedule_reason">理由：</string>
    <string name="schedule_update">编辑日程</string>
    <string name="schedule_see">详情</string>
    <string-array name="schedule_spinner01">
        <item>无提醒</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>15分钟</item>
        <item>20分钟</item>
        <item>30分钟</item>
        <item>1个小时</item>
        <item>2个小时</item>
        <item>4个小时</item>
        <item>12个小时</item>
    </string-array>
    <string-array name="schedule_spinner02">
        <item>音乐</item>
        <item>震动</item>
        <item>音乐和震动</item>
    </string-array>
    <string name="business_title">业务查询</string>
    <string name="illegal_add">违章取证</string>
    <string name="illegal_user">执法人：</string>
    <string name="illegal_user1">第一执法人：</string>
    <string name="illegal_user2">第二执法人：</string>
    <string name="illegal_approvaluser">审核人：</string>
    <string name="illegal_user3">补充人：</string>
    <string name="illegal_object">违章对象：</string>
    <string name="illegal_reason">违章缘由：</string>
    <string name="spinner_reason">违章缘由</string>
    <string name="illegal_description">违章描述：</string>
    <string name="illegal_hint_addUser">选择第二执法人</string>
    <string name="illegal_time">执法时间：</string>
    <string name="illegal_updateList">补充情况：</string>
    <string name="illegal_bt1">港政</string>
    <string name="illegal_bt2">运政</string>
    <string name="illegal_bt3">航政</string>
    <string name="illegal_bt4">海事</string>
    <string name="illegal_check_do">审核</string>
    <string name="illegal_check_reasult">审核结果：</string>
    <string name="illegal_check_content">审核建议：</string>
    <string-array name="illegal_check_spinner">
        <item>通过</item>
        <item>驳回</item>
    </string-array>
    <string name="addresslist_button">通讯录</string>
    <string name="knowledge_button">知识库</string>
    <string name="leaveandovertime_button">考勤管理</string>
    <string name="electricreport_main_unit1">吨</string>
    <string name="electricreport_main_unit2">升</string>
    <string name="electricreport_main_unit3">包</string>
    <string name="electricreport_main_unit4">箱</string>
    <string name="electricreport_main_unit5">桶</string>
    <string name="electricreport_main_unit6">袋</string>
    <string name="electricreport_main_unit7">件</string>
    <string name="electricreport_main_unit8">台</string>
    <string name="electricreport_uniti">选择单位</string>
    <string name="fragment_set_leave">请假加班审批人设置</string>
    <string name="fragment_set_textview1">网络地址</string>
    <string name="fragment_set_textview2">设备信息</string>
    <string name="fragment_set_edit_password">修改密码</string>
    <string name="fragment_set_textview3">检查更新</string>
    <string name="fragment_set_textview5">关于我们</string>
    <string name="fragment_set_pushtimesetting">推送时间设定</string>
    <string name="fragment_set_ip_title">网络地址</string>
    <string name="fragment_set_ip_update_title">修改网络地址</string>
    <string name="fragment_set_uplosd">上传管理</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="check_password">确认密码</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="check_password_hint">再次输入密码</string>
    <string name="setup_update_password">修改密码</string>
</resources>