<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="center_horizontal"
>

   
   
    <Button
      android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="@string/addresslist_button" 
     android:id="@+id/addresslist_button"  />
      <Button
      android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="@string/knowledge_button" 
     android:id="@+id/knowledge_button"  />  
       <Button
      android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="@string/leaveandovertime_button" 
     android:id="@+id/leaveandovertime_button"  />  
    
    
</LinearLayout>