<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_backgrundmenu"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/setup_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/title_back" >
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/setup_password_back"
            android:gravity="center"
            android:text="@string/setup_update_password"
            android:textColor="#0067ac"
            android:textSize="18sp" >
        </TextView>

        <ImageButton
            android:id="@+id/setup_password_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:contentDescription="@string/upload"
            android:src="@drawable/le_submit" >
        </ImageButton>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/old_password"
            android:textColor="@color/Light_black"
            android:textSize="17sp" >
        </TextView>

        <EditText
            android:id="@+id/setup_password_old"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/Light_gray"
            android:textSize="17sp" >
        </EditText>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/new_password"
            android:textColor="@color/Light_black"
            android:textSize="17sp" >
        </TextView>

        <EditText
            android:id="@+id/setup_password_new"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/Light_gray"
            android:textSize="17sp" >
        </EditText>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:text="@string/check_password"
            android:textColor="@color/Light_black"
            android:textSize="17sp" >
        </TextView>

        <EditText
            android:id="@+id/setup_password_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:gravity="right|center_vertical"
            android:hint="@string/check_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@color/Light_gray"
            android:textSize="17sp" >
        </EditText>
    </RelativeLayout>

</LinearLayout>