<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/login_bg"
   >
   
       <RelativeLayout
        android:id="@+id/fragment_set_ip_update_titleR"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_backgrundmenu" >

        <ImageButton
            android:id="@+id/fragment_set_ip_update_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:src="@drawable/title_back" />

        <TextView
            android:id="@+id/fragment_set_ip_update_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/fragment_set_ip_update_back"
            android:gravity="fill_vertical"
            android:text="@string/fragment_set_ip_update_title"
            android:textColor="#0067ac"
            android:textSize="18sp"/>
        
        
          <ImageButton
            android:id="@+id/fragment_set_ip_update_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:contentDescription="@string/search"
            android:src="@drawable/le_submit" />
    </RelativeLayout>
    
   
  
       <EditText 
        android:id="@+id/fragment_set_ip_update_e"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:text="@string/fragment_set_ip_title"
        android:layout_below="@id/fragment_set_ip_update_titleR"
        android:background="@color/white"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        />

    <Button
        android:id="@+id/fragment_set_ip_bu"
        android:layout_below="@id/fragment_set_ip_update_e"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    
    
    
    
  </RelativeLayout>