<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_backgrundmenu" >

        <ImageButton
            android:id="@+id/illegal_check_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:src="@drawable/title_back" />

        <TextView
            android:id="@+id/illegal_check_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_toRightOf="@+id/illegal_check_back"
            android:gravity="left|center_vertical"
            android:text="@string/illegal_check_do"
            android:textColor="#0067ac"
            android:textSize="18sp" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/illegal_check_reasult"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/illegal_check_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"  
                android:prompt="@string/illegal_check_spinner" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/illegal_check_content"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/illegal_check_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/illegal_check_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:background="@drawable/imgbt_submit"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

</LinearLayout>